--- a/Moeller/HTML/our-story.html
+++ b/Moeller/HTML/our-story.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width" initial-scale="1">	
 <title>Moeller Home Management | Our Story </title>
 <link rel="stylesheet" href="../CSS/styles.css" media="screen">
 <link rel="stylesheet" href="../CSS/story.css" media="screen">
