--- a/Moeller/HTML/contact-us.html
+++ b/Moeller/HTML/contact-us.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width" initial-scale="1">	
 <title>Moeller Home Managment | Milwaukee's premium home improvment service </title>
 <link rel="stylesheet" href="../CSS/styles.css" media="screen">
 <link rel="stylesheet" href="../CSS/contact.css" media="screen">
