--- a/Moeller/HTML/testimonials.html
+++ b/Moeller/HTML/testimonials.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width" initial-scale="1">	
 <title>Moeller Home Managment | Testimonials</title>
 <link rel="stylesheet" href="../CSS/styles.css" media="screen">
 	<link rel="stylesheet" href="../CSS/testimonial.css" media="screen">
