dedicated JS folder, added home to overlay

--- a/Moeller/index.html
+++ b/Moeller/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width" initial-scale="1">
 <title>Moeller Home Managment | Milwaukee's Premium Home Improvement Service </title>
+	<script type="text/javascript" src="js/main.js"></script>
 <link rel="stylesheet" href="CSS/styles.css" media="screen">
 <link rel="stylesheet" href="CSS/home.css" media="screen">
 <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -11,7 +12,7 @@
 </head>
 <body>
 <div id="myNav" class="overlay">
-  <div class="overlay-content"> <a href="HTML/our-story.html">Our Story</a> <a href="HTML/our-services.html">Our Services</a> <a href="HTML/testimonials.html">Testimonials</a>
+  <div class="overlay-content"> <a href="index.html">Home</a> <a href="HTML/our-story.html">Our Story</a> <a href="HTML/our-services.html">Our Services</a> <a href="HTML/testimonials.html">Testimonials</a>
     <button id="slideButton">
     <a href="HTML/contact-us.html">Contact</a>
     </button>
@@ -144,25 +145,4 @@
   <p style="color: white" align="center">© Moeller Home Management 2021/Design by Ryan Coen</p>
 </div>
 </body>
-<script>
-function myFunction(x) {
-  x.classList.toggle("change");
-}
-var nav = false;		
-		
-function openNav() {
-  document.getElementById("myNav").style.width = "100%";
-	nav = true;
-}
-
-function closeNav() {
-  document.getElementById("myNav").style.width = "0%";
-	nav = false;
-}
-		
-function toggleNav() {
-      nav ? closeNav() : openNav();
-    }		
-		
-</script>
 </html>
