--- a/Moeller/HTML/testimonials.html
+++ b/Moeller/HTML/testimonials.html
@@ -6,13 +6,14 @@
 <title>Moeller Home Managment | Testimonials</title>
 <link rel="stylesheet" href="../CSS/styles.css" media="screen">
 	<link rel="stylesheet" href="../CSS/testimonial.css" media="screen">
+		<script type="text/javascript" src="../js/main.js"></script>
 <!--Google Fonts-->
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="myNav" class="overlay">
-  <div class="overlay-content"> <a href="../HTML/our-story.html">Our Story</a> <a href="../HTML/our-services.html">Our Services</a> <a href="../HTML/testimonials.html">Testimonials</a>
+  <div class="overlay-content"><a href="../index.html">Home</a> <a href="../HTML/our-story.html">Our Story</a> <a href="../HTML/our-services.html">Our Services</a> <a href="../HTML/testimonials.html">Testimonials</a>
     <button id="slideButton">
     <a href="../HTML/contact-us.html">Contact</a>
     </button>
