--- a/Moeller/HTML/testimonials.html
+++ b/Moeller/HTML/testimonials.html
@@ -48,6 +48,7 @@
 </div>
 	
 	</div>
+	<div id="messageContainer"> <img id="messageIcon" src="../images/message.png"> </div>
 <div id="footer">
   <div id="footerContainer">
     <div class="footerCol">
