--- a/Moeller/HTML/contact-us.html
+++ b/Moeller/HTML/contact-us.html
@@ -150,49 +150,39 @@
   </div>
 </div>
 <div id="footer">
-  <div id="footerContainer">
-    <div class="footerCol"> <a href="">
-      <h4>Services</h4>
-      </a>
+   <div id="footerContainer">
+    <div class="footerCol">
+      <a href=""><h4>Services</h4></a>
       <ul>
-        <a href="">
-        <li>Cleaning</li>
+		 <a href="">
+        <li>Maintenance/Repair</li>
         </a> <a href="">
-        <li>Construction</li>
+        <li>Remodeling</li>
         </a> <a href="">
-        <li>Design</li>
+        <li>Interior Design</li>
         </a> <a href="">
-        <li>Installation</li>
+        <li>Doors, Windows, and Siding</li>
+        </a> <a href="">
+        <li>Painting and Staining</li>
+        </a> <a href="">
+        <li>Plumbing and Electrical</li>
+        </a> <a href="">
+        <li>Organization and Cleaning</li>
+        </a> <a href="">
+        <li>Technology/Security</li>
         </a> <a href="">
         <li>Landscaping</li>
-        </a> <a href="">
-        <li>Maintenance and Repair</li>
-        </a> <a href="">
-        <li>Security</li>
-        </a> <a href="">
-        <li>Tech</li>
         </a>
       </ul>
     </div>
-    <div class="footerCol"> <a href="">
-      <h4>Our Company</h4>
-      </a>
+    <div class="footerCol">
+       <a href=""><h4>Our Company</h4></a>
       <ul>
-        <a href="">
-        <li>Our Story</li>
-        </a> <a href="">
-        <li>Community</li>
-        </a>
+        <a href=""> <li>Our Story</li></a>
       </ul>
-      <a href="">
-      <h4>Questions?</h4>
-      </a>
+       <a href=""><h4>Questions?</h4></a>
       <ul>
-        <a href="">
-        <li>FAQ/How it works</li>
-        </a> <a href="">
-        <li>Contact Us</li>
-        </a>
+         <a href=""><li>Contact Us</li></a>
       </ul>
     </div>
   </div>
