--- a/Moeller/HTML/our-story.html
+++ b/Moeller/HTML/our-story.html
@@ -46,19 +46,18 @@
   </div>
   <div class="div-one"></div>
   <div class="div-two" ></div>
-  <div id="milwaukee">
-    <div id="innerMilwaukee">
-      <h1>Est. in Milwaukee, WI</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fermentum pretium tincidunt. Sed bibendum tempor lectus et imperdiet. Aliquam erat volutpat. Praesent dignissim bibendum dui, vel posuere odio laoreet at.</p>
-    </div>
-  </div>
-  <div id="explainer" align="center">
-    <h1>We believe home improvement should be easy</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fermentum pretium tincidunt. Sed bibendum tempor lectus et imperdiet. Aliquam erat volutpat. Praesent dignissim bibendum dui, vel posuere odio laoreet at.</p>
-    <img src="../images/5.jpg">
-    <h1>A custom concierge taylored to your every need</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fermentum pretium tincidunt. Sed bibendum tempor lectus et imperdiet. Aliquam erat volutpat. Praesent dignissim bibendum dui, vel posuere odio laoreet at.</p>
-    <img src="../images/8.jpg"> </div>
+	<div id="aboutContainer">
+		<div id="innerAbout">
+	<h1 align="center">At MHM...</h1>
+	<p>We offer our members the peace of mind that comes from knowing that your home and property are being managed with the best care possible and with a level of service, professionalism, integrity, and craftsmanship unlike any other.  </p>
+			<h3>Peace of Mind comes from:</h3>
+		<ul>
+		<li>Letting us source the perfect service provider for your needs saving you significant time, effort, and frustration.  We will manage every project from beginning through completion.</li>
+		<li>We eliminate the fear associated with “Do I have the right provider?  Can I trust them in my home and how will I know if they are doing great job?  </li>
+		<li>We protect your money in several ways beginning with our Home Physical, which is a comprehensive, detailed inspection of all areas of your home a property which allows us to prioritize maintenance and project needs to reduce the need for expensive future repairs.  We also negotiate all pricing with our providers to ensure you receive the best price and value for your project. </li>
+		</ul>
+		<p>Our clients have the luxury of working with one company for all their home and property needs from routine maintenance items to substantial remodeling of the home and everything in between.</p></div>
+	</div>
   <div id="container2">
     <div id="innerProfile"> <img id="profileImg" src="../images/129287357_101027188549076_9151431049299702872_n.jpg">
       <div id="profileDesc">
@@ -71,49 +70,39 @@
 </div>
 <div id="messageContainer"> <img id="messageIcon" src="../images/message.png"> </div>
 <div id="footer">
-  <div id="footerContainer">
-    <div class="footerCol"> <a href="">
-      <h4>Services</h4>
-      </a>
+   <div id="footerContainer">
+    <div class="footerCol">
+      <a href=""><h4>Services</h4></a>
       <ul>
-        <a href="">
-        <li>Cleaning</li>
+		 <a href="">
+        <li>Maintenance/Repair</li>
         </a> <a href="">
-        <li>Construction</li>
+        <li>Remodeling</li>
         </a> <a href="">
-        <li>Design</li>
+        <li>Interior Design</li>
         </a> <a href="">
-        <li>Installation</li>
+        <li>Doors, Windows, and Siding</li>
+        </a> <a href="">
+        <li>Painting and Staining</li>
+        </a> <a href="">
+        <li>Plumbing and Electrical</li>
+        </a> <a href="">
+        <li>Organization and Cleaning</li>
+        </a> <a href="">
+        <li>Technology/Security</li>
         </a> <a href="">
         <li>Landscaping</li>
-        </a> <a href="">
-        <li>Maintenance and Repair</li>
-        </a> <a href="">
-        <li>Security</li>
-        </a> <a href="">
-        <li>Tech</li>
         </a>
       </ul>
     </div>
-    <div class="footerCol"> <a href="">
-      <h4>Our Company</h4>
-      </a>
+    <div class="footerCol">
+       <a href=""><h4>Our Company</h4></a>
       <ul>
-        <a href="">
-        <li>Our Story</li>
-        </a> <a href="">
-        <li>Community</li>
-        </a>
+        <a href=""> <li>Our Story</li></a>
       </ul>
-      <a href="">
-      <h4>Questions?</h4>
-      </a>
+       <a href=""><h4>Questions?</h4></a>
       <ul>
-        <a href="">
-        <li>FAQ/How it works</li>
-        </a> <a href="">
-        <li>Contact Us</li>
-        </a>
+         <a href=""><li>Contact Us</li></a>
       </ul>
     </div>
   </div>
