--- a/Moeller/HTML/testimonials.html
+++ b/Moeller/HTML/testimonials.html
@@ -54,25 +54,34 @@
     <div class="footerCol">
       <a href=""><h4>Services</h4></a>
       <ul>
-		  <a href=""><li>Cleaning</li></a>
-        <a href=""> <li>Construction</li></a>
-        <a href=""> <li>Design</li></a>
-        <a href=""> <li>Installation</li></a>
-         <a href=""><li>Landscaping</li></a>
-         <a href=""><li>Maintenance and Repair</li></a>
-         <a href=""><li>Security</li></a>
-         <a href=""><li>Tech</li></a>
+		 <a href="">
+        <li>Maintenance/Repair</li>
+        </a> <a href="">
+        <li>Remodeling</li>
+        </a> <a href="">
+        <li>Interior Design</li>
+        </a> <a href="">
+        <li>Doors, Windows, and Siding</li>
+        </a> <a href="">
+        <li>Painting and Staining</li>
+        </a> <a href="">
+        <li>Plumbing and Electrical</li>
+        </a> <a href="">
+        <li>Organization and Cleaning</li>
+        </a> <a href="">
+        <li>Technology/Security</li>
+        </a> <a href="">
+        <li>Landscaping</li>
+        </a>
       </ul>
     </div>
     <div class="footerCol">
        <a href=""><h4>Our Company</h4></a>
       <ul>
         <a href=""> <li>Our Story</li></a>
-        <a href=""> <li>Community</li></a>
       </ul>
        <a href=""><h4>Questions?</h4></a>
       <ul>
-         <a href=""><li>FAQ/How it works</li></a>
          <a href=""><li>Contact Us</li></a>
       </ul>
     </div>
