--- a/Moeller/index.html
+++ b/Moeller/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width" initial-scale="1">
-<title>Moeller Home Managment | Milwaukee's Premium Home Improvement Service </title>
+<title>Moeller Home Management | Milwaukee's Premium Home Improvement Service </title>
 	<script type="text/javascript" src="js/main.js"></script>
 <link rel="stylesheet" href="CSS/styles.css" media="screen">
 <link rel="stylesheet" href="CSS/home.css" media="screen">
@@ -42,6 +42,7 @@
 <div id="sliderCover">
   <div id="welcomeBanner" align="center"> <img src="images/noTextLogoWhite.png"/>
     <h3 id="brand">Moeller Home Management</h3>
+	  <h4>Concierge home solutions. <br>Peace of mind guaranteed.</h4>
   </div>
 </div>
 <div class="slider">
@@ -51,18 +52,18 @@
 </div>
 <div id="contactbanner">
   <div id="innerbanner">
-    <div class="caption"> We do:
+    <div class="caption"> We handle:
       <div class="text-box">
-        <div>everything.</div>
-        <div>design.</div>
-        <div>construction.</div>
-        <div>cleaning.</div>
-        <div>installation.</div>
-        <div>security.</div>
-        <div>technology.</div>
-        <div>landscaping.</div>
-        <div>repair.</div>
-        <div>maintenance.</div>
+        <div>Analysis.</div>
+        <div>Repair.</div>
+        <div>Remodeling.</div>
+        <div>Organization.</div>
+        <div>Installation.</div>
+        <div>Security.</div>
+        <div>Technology.</div>
+        <div>Landscaping.</div>
+        <div>Flooring</div>
+        <div>Maintenance.</div>
       </div>
     </div>
     <div class="talkBtn">
@@ -71,19 +72,21 @@
   </div>
 </div>
 <div id="descContainer">
-  <h2 align="center">Home improvement without the hassle</h2>
+  <h2 align="center">Home and Property Management that ensures <br><b>Peace of Mind</b> and complete satisfaction.</h2>
   <div id="innerDescContain">
-    <div class="savings">
+    <div class="savings" id="level1">
       <h3>Your time is valuable</h3>
-      <p>We source, schedule and negotiate the best providers for your projects; No need to worry about wasting time or waiting for call backs.</p>
+      <p>We protect your time by sourcing, scheduling, negotiating, and managing the best providers for your projects.  
+No more wasting countless hours going through lists of providers only to have them not call back or worse yet, not show up for an appointment.
+</p>
     </div>
-    <div class="savings">
+    <div class="savings" id="level2">
       <h3>Make every dollar count</h3>
-      <p>We ensure the job is done right, the first time, with no hidden costs. Our <b>Home Physical Analysis</b> proactively identifies concerns before they become expensive repairs.</p>
+      <p>We maximize every dollar that you invest in your home and property.  Our <b>Home Physical Analysis </b>identifies concerns before they become expensive repairs and allows us to prioritize your maintenance needs. <br><br> Accurate project quoting minimizes those surprise “Extra Charges” and our excellence in craftsmanship ensures that the job is done right the first time.</p>
     </div>
-    <div class="savings">
+    <div class="savings" id="level3">
       <h3>Give you Peace of Mind</h3>
-      <p>Home improvement can be stressful. We match you with providers you can trust and ensure your projects meet your budget.</p>
+      <p>No more stress and frustration around trying to find top quality providers for your home’s needs.  No more worrying if they will show up and if the work they are doing is actually the highest quality and done “right”.   You can trust the providers we have working in your home because they will only be in your home if we would let them work in our own homes.</p>
     </div>
     <div id="talkBtn">
       <button class="btn">Let's TalK</button>
@@ -92,49 +95,39 @@
 </div>
 <div id="messageContainer"> <img id="messageIcon" src="images/message.png"> </div>
 <div id="footer">
-  <div id="footerContainer">
-    <div class="footerCol"> <a href="">
-      <h4>Services</h4>
-      </a>
+   <div id="footerContainer">
+    <div class="footerCol">
+      <a href=""><h4>Services</h4></a>
       <ul>
-        <a href="">
-        <li>Cleaning</li>
+		 <a href="">
+        <li>Maintenance/Repair</li>
         </a> <a href="">
-        <li>Construction</li>
+        <li>Remodeling</li>
         </a> <a href="">
-        <li>Design</li>
+        <li>Interior Design</li>
         </a> <a href="">
-        <li>Installation</li>
+        <li>Doors, Windows, and Siding</li>
+        </a> <a href="">
+        <li>Painting and Staining</li>
+        </a> <a href="">
+        <li>Plumbing and Electrical</li>
+        </a> <a href="">
+        <li>Organization and Cleaning</li>
+        </a> <a href="">
+        <li>Technology/Security</li>
         </a> <a href="">
         <li>Landscaping</li>
-        </a> <a href="">
-        <li>Maintenance and Repair</li>
-        </a> <a href="">
-        <li>Security</li>
-        </a> <a href="">
-        <li>Tech</li>
         </a>
       </ul>
     </div>
-    <div class="footerCol"> <a href="">
-      <h4>Our Company</h4>
-      </a>
+    <div class="footerCol">
+       <a href=""><h4>Our Company</h4></a>
       <ul>
-        <a href="">
-        <li>Our Story</li>
-        </a> <a href="">
-        <li>Community</li>
-        </a>
+        <a href=""> <li>Our Story</li></a>
       </ul>
-      <a href="">
-      <h4>Questions?</h4>
-      </a>
+       <a href=""><h4>Questions?</h4></a>
       <ul>
-        <a href="">
-        <li>FAQ/How it works</li>
-        </a> <a href="">
-        <li>Contact Us</li>
-        </a>
+         <a href=""><li>Contact Us</li></a>
       </ul>
     </div>
   </div>
