--- a/Moeller/HTML/our-services.html
+++ b/Moeller/HTML/our-services.html
@@ -3,8 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>Moeller Home Management | Our Services </title>
+	<meta name="viewport" content="width=device-width" initial-scale="1">
 <link rel="stylesheet" href="../CSS/styles.css" media="screen">
 <link rel="stylesheet" href="../CSS/services.css" media="screen">
+<script type="text/javascript" src="../js/main.js"></script> 
 <!--Google Fonts-->
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -38,33 +40,92 @@
     </ul>
   </div>
 </nav>
-<div id="hiddenMenu"></div>
 <div id="mainContainer">
   <div id="BannerContainer">
     <h1>Our Services</h1>
   </div>
   <div class="div-one"></div>
-  <div class="service" id="cleaning">
-    <div class="innerService">
-      <h1>Cleaning & Organization</h1>
-      <ul>
-        <li>House Keeping</li>
-        <li>Deep Cleaning </li>
-        <li>Duct Work</li>
-        <li>Power Washing</li>
-        <li>Five</li>
-        <li>One</li>
-        <li>Two</li>
-        <li>Three</li>
-        <li>Four</li>
-        <li>Five</li>
-      </ul>
+  <div id="membershipContainer">
+    <div id="memberHeader"> <img id="memberLogo" src="../images/noTextLogoWhite.png">
+      <h2 >Single projects or year round service;<br>
+        Either way, we've got you covered.</h2>
     </div>
-	  <div class="innerServiceImg" id="cleaningImg"></div>
+    <div id="innerMembership">
+      <div id="card1" class="membershipCard">
+        <div id="cardImage1">
+          <h3>Standalone Services</h3>
+        </div>
+        <ul>
+          <li>A La Carte Services</li>
+          <li>Access to Licensed & Insured Subtractors</li>
+          <li>No Commitment</li>
+        </ul>
+        <a href="option1" align="center" class="btnContain">
+        <button onclick="jump()" class="svcButton">View Services</button>
+        </a> </div>
+      <div id="card2" class="membershipCard">
+        <div id="cardImage2">
+          <h3>Moeller Home Membership</h3>
+        </div>
+        <ul>
+          <li>24/7 One-Call Service </li>
+          <li>Recurring Services Scheduling</li>
+          <li>Access to Licensed & Insured Subtractors</li>
+          <li>Consolidated Monthly Invoices</li>
+          <li>Monthly Walk-Through Inspection</li>
+          <li>Priority Appointment Scheduling</li>
+          <li>Lock and Leave Service</li>
+          <li>Light Bulb Replacement Labor</li>
+          <li>HVAC Filter Replacement Labor</li>
+          <li>Full Service Property Management</li>
+        </ul>
+        <a align="center" href="option1" class="btnContain">
+        <button onclick="jump()" class="svcButton">View Services</button>
+        </a> </div>
+    </div>
   </div>
-	 <div class="service" id="cleaning">
+  <div class="service" id="option1">
+	  <div class="serviceDiv">
     <div class="innerService">
-      <h1>Cleaning & Organization</h1>
+      <h1>Preventative Maintenance & Repair</h1>
+      <ul>
+        <li>HVAC</li>
+        <li>General Carpentry</li>
+        <li>Electrical</li>
+        <li>Plumbing Appliances</li>
+        <li>Roofing  </li>
+        <li>Wallpaper  </li>
+        <li>Paint  </li>
+        <li>Flooring  </li>
+        <li>Fence  </li>
+        <li>Generator  </li>
+      </ul>
+    </div>
+    <div class="innerServiceImg" id="repairImg"></div>
+  </div></div>
+  <div class="service" id="option2">
+	  <div class="serviceDiv">
+      <div class="innerService">
+        <h1>Remodeling</h1>
+        <ul>
+          <li>House Keeping</li>
+          <li>Deep Cleaning </li>
+          <li>Duct Work</li>
+          <li>Power Washing</li>
+          <li>Five</li>
+          <li>One</li>
+          <li>Two</li>
+          <li>Three</li>
+          <li>Four</li>
+          <li>Five</li>
+        </ul>
+      </div>
+      <div class="innerServiceImg" id="remodelingImg"></div>
+  </div></div>
+  <div class="service" id="option3">
+	  <div class="serviceDiv">
+    <div class="innerService">
+      <h1>Interior Design</h1>
       <ul>
         <li>House Keeping</li>
         <li>Deep Cleaning </li>
@@ -78,11 +139,12 @@
         <li>Five</li>
       </ul>
     </div>
-	  <div class="innerServiceImg" id="cleaningImg"></div>
-  </div>
-	 <div class="service" id="cleaning">
+    <div class="innerServiceImg" id="InteriorImg"></div>
+  </div></div>
+  <div class="service" id="option4">
+	  <div class="serviceDiv">
     <div class="innerService">
-      <h1>Cleaning & Organization</h1>
+      <h1>Doors, Windows, & Siding</h1>
       <ul>
         <li>House Keeping</li>
         <li>Deep Cleaning </li>
@@ -96,11 +158,12 @@
         <li>Five</li>
       </ul>
     </div>
-	  <div class="innerServiceImg" id="cleaningImg"></div>
-  </div>
-	 <div class="service" id="cleaning">
+    <div class="innerServiceImg" id="DoorImg"></div>
+  </div></div>
+  <div class="service" id="option5">
+	  <div class="serviceDiv">
     <div class="innerService">
-      <h1>Cleaning & Organization</h1>
+      <h1>Painting & Staining</h1>
       <ul>
         <li>House Keeping</li>
         <li>Deep Cleaning </li>
@@ -114,53 +177,139 @@
         <li>Five</li>
       </ul>
     </div>
-	  <div class="innerServiceImg" id="cleaningImg"></div>
+    <div class="innerServiceImg" id="PaintingImg"></div>
+  </div></div>
+  <div class="service" id="option6">
+	  <div class="serviceDiv">
+    <div class="innerService">
+      <h1>Plumbing & Electrical</h1>
+      <ul>
+        <li>House Keeping</li>
+        <li>Deep Cleaning </li>
+        <li>Duct Work</li>
+        <li>Power Washing</li>
+        <li>Five</li>
+        <li>One</li>
+        <li>Two</li>
+        <li>Three</li>
+        <li>Four</li>
+        <li>Five</li>
+      </ul>
+    </div>
+    <div class="innerServiceImg" id="PlumbingImg"></div>
+  </div></div>
+  <div class="service" id="option7">
+	  <div class="serviceDiv">
+    <div class="innerService">
+      <h1>Security Systems and Smart Home</h1>
+      <ul>
+        <li>House Keeping</li>
+        <li>Deep Cleaning </li>
+        <li>Duct Work</li>
+        <li>Power Washing</li>
+        <li>Five</li>
+        <li>One</li>
+        <li>Two</li>
+        <li>Three</li>
+        <li>Four</li>
+        <li>Five</li>
+      </ul>
+    </div>
+    <div class="innerServiceImg" id="SecurityImg"></div>
+  </div></div>
+  <div class="service" id="option8">
+	  <div class="serviceDiv">
+    <div class="innerService">
+      <h1>Audio/Video Solutions</h1>
+      <ul>
+        <li>House Keeping</li>
+        <li>Deep Cleaning </li>
+        <li>Duct Work</li>
+        <li>Power Washing</li>
+        <li>Five</li>
+        <li>One</li>
+        <li>Two</li>
+        <li>Three</li>
+        <li>Four</li>
+        <li>Five</li>
+      </ul>
+    </div>
+    <div class="innerServiceImg" id="TheaterImg"></div>
+  </div></div>
+  <div class="service" id="option9">
+	  <div class="serviceDiv">
+    <div class="innerService">
+      <h1>Organization & Cleaning</h1>
+      <ul>
+        <li>House Keeping</li>
+        <li>Deep Cleaning </li>
+        <li>Duct Work</li>
+        <li>Power Washing</li>
+        <li>Five</li>
+        <li>One</li>
+        <li>Two</li>
+        <li>Three</li>
+        <li>Four</li>
+        <li>Five</li>
+      </ul>
+    </div>
+    <div class="innerServiceImg" id="cleaningImg"></div>
+  </div></div>
+  <div class="service" id="option10">
+	  <div class="serviceDiv">
+    <div class="innerService">
+      <h1>Landscaping</h1>
+      <ul>
+        <li>House Keeping</li>
+        <li>Deep Cleaning </li>
+        <li>Duct Work</li>
+        <li>Power Washing</li>
+        <li>Five</li>
+        <li>One</li>
+        <li>Two</li>
+        <li>Three</li>
+        <li>Four</li>
+        <li>Five</li>
+      </ul>
+    </div>
+    <div class="innerServiceImg" id="LandscapingImg">.</div>
   </div>
 </div>
+<div id="messageContainer"> <img id="messageIcon" src="../images/message.png"> </div>
 <div id="footer">
-  <div id="footerContainer">
-    <div class="footerCol"> <a href="">
-      <h4>Services</h4>
-      </a>
+   <div id="footerContainer">
+    <div class="footerCol">
+      <a href=""><h4>Services</h4></a>
       <ul>
-        <a href="">
-        <li>Cleaning</li>
+		 <a href="">
+        <li>Maintenance/Repair</li>
         </a> <a href="">
-        <li>Construction</li>
+        <li>Remodeling</li>
         </a> <a href="">
-        <li>Design</li>
+        <li>Interior Design</li>
         </a> <a href="">
-        <li>Installation</li>
+        <li>Doors, Windows, and Siding</li>
+        </a> <a href="">
+        <li>Painting and Staining</li>
+        </a> <a href="">
+        <li>Plumbing and Electrical</li>
+        </a> <a href="">
+        <li>Organization and Cleaning</li>
+        </a> <a href="">
+        <li>Technology/Security</li>
         </a> <a href="">
         <li>Landscaping</li>
-        </a> <a href="">
-        <li>Maintenance and Repair</li>
-        </a> <a href="">
-        <li>Security</li>
-        </a> <a href="">
-        <li>Tech</li>
         </a>
       </ul>
     </div>
-    <div class="footerCol"> <a href="">
-      <h4>Our Company</h4>
-      </a>
+    <div class="footerCol">
+       <a href=""><h4>Our Company</h4></a>
       <ul>
-        <a href="">
-        <li>Our Story</li>
-        </a> <a href="">
-        <li>Community</li>
-        </a>
+        <a href=""> <li>Our Story</li></a>
       </ul>
-      <a href="">
-      <h4>Questions?</h4>
-      </a>
+       <a href=""><h4>Questions?</h4></a>
       <ul>
-        <a href="">
-        <li>FAQ/How it works</li>
-        </a> <a href="">
-        <li>Contact Us</li>
-        </a>
+         <a href=""><li>Contact Us</li></a>
       </ul>
     </div>
   </div>
